Fixed word wrap on 'Send' button - resolves #1116

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -643,6 +643,8 @@ ol li {
 }
 
 #send {
+  white-space: nowrap;
+
   &.show {
     display: flex;
     position: fixed;
